update feature show and hidden popup

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <div class="chat">
 
-        <button class="icon-chat">Open</button>
+        <button class="icon-chat" onclick="handleOpen()">Open</button>
 
         <div class="wrap-chat">
 
-            <button class="close">X</button>
+            <button onclick="handleClose()" class="close">X</button>
             <div class="content">
                 <!-- Noi dung .... -->
             </div>
